# smallstring

./: Cargo.toml  README.md
src/: lib.rs
tests/: basic.rs
