[package]
name = "smallstring"
version = "0.1.3"
authors = ["Jack Fransham <moonfudgeman@hotmail.co.uk>"]
repository = "https://github.com/jFransham/smallstring"
description = "'Small string' optimization: store small strings on the stack using smallvec"
license = "MIT"

[dependencies]
smallvec = "1.4.0"
